--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,9 +18,15 @@ path = "src/bin/authorize/main.rs"
 
 [dependencies]
 anyhow = "1.0"
+log = "0.4"
+env_logger = "0.9"
 
 tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
+
+# Data
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.5"
 
 # Discord
 serenity = "0.11"
