--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ path = "src/bin/authorize/main.rs"
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.9"
+crossbeam-channel = "0.5"
+ctrlc = "3.2"
+lazy_static = "1.4"
 
 tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
