--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,12 +20,10 @@ path = "src/bin/authorize/main.rs"
 anyhow = "1.0"
 log = "0.4"
 env_logger = "0.9"
-crossbeam-channel = "0.5"
 ctrlc = "3.2"
 lazy_static = "1.4"
 
 tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
-tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
 
 # Data
 serde = { version = "1.0", features = ["derive"] }
@@ -36,7 +34,7 @@ serenity = "0.11"
 
 # Twitch
 reqwest = { version = "0.11", features = ["json"] }
-twitch-irc = { version = "5.0", features = ["default", "refreshing-token-native-tls"] }
+twitchchat = { version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
 twitch_api = { version = "0.7.0-rc.2", features = ["all", "reqwest"] }
 
 # Commands
