--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,8 +34,8 @@ serenity = "0.11"
 
 # Twitch
 reqwest = { version = "0.11", features = ["json"] }
-twitchchat = { version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
-twitch_api = { version = "0.7.0-rc.2", features = ["all", "reqwest"] }
+twitchchat = { git = "https://github.com/museun/twitchchat", version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
+twitch_api = { version = "0.7.0-rc.3", features = ["all", "reqwest"] }
 
 # Commands
 ferris-says = "0.2"
