--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ log = "0.4"
 env_logger = "0.9"
 ctrlc = "3.2"
 lazy_static = "1.4"
+chrono = "0.4"
 
 tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
 
