--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,28 +5,16 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[lib]
-name = "sometimes_youwin"
+[workspace]
+members = [
+    "crates/*"
+]
 
-[[bin]]
-name = "bot"
-path = "src/bin/bot/main.rs"
-
-[[bin]]
-name = "live"
-path = "src/bin/live-checker/main.rs"
-
-# [[bin]]
-# name = "authorize"
-# path = "src/bin/authorize/main.rs"
-
-[dependencies]
-anyhow = "1.0"
+[workspace.dependencies]
+anyhow = "1.0.69"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.9"
-ctrlc = "3.2"
-lazy_static = "1.4"
 chrono = "0.4"
 
 tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
@@ -35,14 +23,15 @@ tokio = { version = "1.22", features = ["macros", "rt-multi-thread"] }
 serde = { version = "1.0", features = ["derive"] }
 toml = "0.5"
 
-# Discord
-serenity = "0.11"
+[dependencies]
+anyhow = { workspace = true }
+tokio = { workspace = true }
+log = { workspace = true }
+env_logger = { workspace = true }
+chrono = { workspace = true }
 
-# Twitch
-reqwest = { version = "0.11", features = ["json"] }
-twitchchat = { git = "https://github.com/museun/twitchchat", version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
-twitch_api = { version = "0.7.0-rc.3", features = ["all", "reqwest"] }
+discord = { path = "crates/discord" }
+twitch = { path = "crates/twitch" }
+model = { path = "crates/model" }
 
-# Commands
-ferris-says = "0.2"
-rand = "0.8"
+ctrlc = "3.2"
