--- a/crates/twitch/Cargo.toml
+++ b/crates/twitch/Cargo.toml
@@ -14,5 +14,5 @@ tokio = { workspace = true }
 log = { workspace = true }
 
 reqwest = { version = "0.11", features = ["json"] }
-twitchchat = { version = "0.14.8", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
+twitchchat = { git = "https://github.com/museun/twitchchat", rev = "883230553d14bf997ad5814bb234ff6fb605ae2d", features = ["async", "tokio", "tokio-util", "tokio-rustls", "webpki-roots"] }
 twitch_api = { version = "0.7.0-rc.4", features = ["all", "reqwest"] }
