implement rhai scripting

--- a/crates/commands/Cargo.toml
+++ b/crates/commands/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 model = { path = "../model" }
+scripting = { path = "../scripting" }
 
 log = { workspace = true }
 thiserror = { workspace = true }
