--- a/crates/scripting/Cargo.toml
+++ b/crates/scripting/Cargo.toml
@@ -9,4 +9,5 @@ edition = "2021"
 log = { workspace = true }
 anyhow = { workspace = true }
 
-rhai = { version = "1.13", features = ["sync", "only_i64", "internals"] }
+rhai = { version = "1.13", features = ["sync", "only_i64"] }
+regex = "1.7"
