fix stream notifications, clear unknown members from reaction roles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,4 @@ model = { path = "crates/model" }
 
 ctrlc = "3.2"
 
-fern = { version = "0.6", features = ["colored"] }
-directories = "4.0"
+logging = { git = "https://github.com/sometimes-youwin/logging.git", rev = "0.1.1" }
