--- a/crates/discord/Cargo.toml
+++ b/crates/discord/Cargo.toml
@@ -13,5 +13,7 @@ anyhow = { workspace = true }
 tokio = { workspace = true }
 log = { workspace = true }
 toml = { workspace = true }
+chrono = { workspace = true }
 
 serenity = "0.11"
+strfmt = "0.2"
